# nonebot-plugin-cs2match

./: LICENSE  README.md  pyproject.toml
.github/workflows/: Release.yml
nonebot_plugin_cs2match/: __init__.py  help.py  tools.py  typst_template.py
src/nonebot_plugin_cs2match/: __init__.py  config.py  configure.py  dynamic_config.py  rule.py  tools.py  typst_template.py
