[tool.poetry]
name = "nonebot-plugin-cs2match"
version = "v1.0.0"
description = "实时追踪 Counter-Strike 2 职业赛事，开赛自动提醒、关键赛况与大比分异动推送。"
license = "MIT"
authors = [
  "StarsetNight <starsetnight@outlook.com>",
]
readme = "README.md"
homepage = "https://github.com/StarsetNight/nonebot-plugin-cs2match"
repository = "https://github.com/StarsetNight/nonebot-plugin-cs2match"
keywords = ["nonebot", "bot", "counter-strike", "cs2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nonebot2 = ">=2.0.0"
nonebot-adapter-onebot = "^2.3.1"
aiohttp = "^3.14.0"
pydantic = "^2.13.3"
python-dotenv = "^1.2.2"
typst = "^0.14.9"
