[project]
name = "nonebot-plugin-cs2match"
version = "1.0.0"
description = "实时追踪 Counter-Strike 2 职业赛事，开赛自动提醒、关键赛况与大比分异动推送。"
license = "MIT"
readme = "README.md"
keywords = ["nonebot", "bot", "counter-strike", "cs2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
authors = [
    { name = "StarsetNight", email = "starsetnight@outlook.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp>=3.13.5",
    "ayafileio>=1.4.6",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot2>=2.4.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "typst>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/StarsetNight/nonebot-plugin-cs2match"
Repository = "https://github.com/StarsetNight/nonebot-plugin-cs2match"

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
default = true

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
